# ollama-anvil

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
anvil/: __init__.py  cli.py  config.py  events.py  observability.py
anvil/agents/: __init__.py  base.py  checkpoints.py  coder.py  dry_run.py  memory.py  orchestrator.py  permissions.py  prompt_library.py  prompts.py  qa.py  researcher.py  rules.py  sessions.py  skills.py  tool_validation.py  tracker.py
anvil/community/: __init__.py  ideas.py  self_improve.py
anvil/hardware/: __init__.py  cuda.py  detect.py  profiles.py  rocm.py  threads.py  vulkan.py
anvil/hooks/: __init__.py  manager.py
anvil/llm/: __init__.py  aliases.py  benchmark.py  cache.py  capabilities.py  chunker.py  client.py  context.py  convert.py  embeddings.py  health.py  huggingface.py  models.py  profiles.py  rag.py  resource.py  tokencount.py
anvil/mcp/: __init__.py  manager.py  natural_language.py  registry.py  web_search.py
anvil/tools/: __init__.py  codebase.py  diff.py  filesystem.py  git.py  handoff.py  shell.py  web.py
anvil/ui/: budget.py  statusline.py  terminal.py
anvil/utils/: config_paths.py  env.py  field_validation.py  fileio.py  frontmatter.py  logging.py  model_context.py  paths.py  pii.py
docs/: hardware-guide.md  hf-models.md  quickstart.md
tests/: test_smoke.py
